<resources>
    <string name="app_name">Movies</string>
    <string name="SL">SHOW LIST</string>
    <string name="I">INSERT</string>
    <string name="Yinput">Enter year of release here</string>
    <string name="Y">Year</string>
    <string name="Ginput">Enter genre here</string>
    <string name="G">Genre</string>
    <string name="MT">Movie Title</string>
    <string name="MTinput">Enter movie title here</string>
    <string-array name="spnR">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>